--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -7,6 +7,10 @@ on:
     branches:
       - main
 
+concurrency:
+  cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
+
 jobs:
   build:
     name: CI - Patch latest Sequoia metallib's
@@ -39,7 +43,7 @@ jobs:
 
       - name: Patch metal libraries
         if: steps.fetch.outputs.BACKUP_FOLDER != ''
-        run: python3 metallib.py --patch ${{ steps.fetch.outputs.BACKUP_FOLDER }}
+        run: python3 metallib.py --patch ${{ steps.fetch.outputs.BACKUP_FOLDER }} --multiprocessing
 
       - name: Build sys_patch_dict.py
         if: steps.fetch.outputs.BACKUP_FOLDER != ''
