cli.py: Add additional logging and skip patching temporarily

--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -50,9 +50,9 @@ jobs:
         run: echo "BACKUP_FOLDER=$(python3 metallib.py --fetch ${{ steps.extract.outputs.DMG_FILE }})" >> $GITHUB_OUTPUT
         id: fetch
 
-      - name: Patch metal libraries
-        if: steps.fetch.outputs.BACKUP_FOLDER != ''
-        run: python3 metallib.py --patch ${{ steps.fetch.outputs.BACKUP_FOLDER }}
+      # - name: Patch metal libraries
+      #   if: steps.fetch.outputs.BACKUP_FOLDER != ''
+      #   run: python3 metallib.py --patch ${{ steps.fetch.outputs.BACKUP_FOLDER }}
 
       - name: Build sys_patch_dict.py
         if: steps.fetch.outputs.BACKUP_FOLDER != ''
