--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -9,7 +9,7 @@ on:
 
 concurrency:
   cancel-in-progress: true
-  group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.ref }}
+  group: ${{ github.workflow }}
 
 jobs:
   build:
