Use rsync to delete

--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -44,14 +44,15 @@ jobs:
 
       - name: Free up space
         run: |
-          /bin/rm -rf /Applications/Xcode_16.1_beta.app
-          /bin/rm -rf /Applications/Xcode_16_beta_6.app
-          /bin/rm -rf /Applications/Xcode_15.3.app
-          /bin/rm -rf /Applications/Xcode_15.2.app
-          /bin/rm -rf /Applications/Xcode_15.1.app
-          /bin/rm -rf /Applications/Xcode_15.0.1.app
-          /bin/rm -rf /Applications/Xcode_14.3.1.app
-          /bin/rm -rf /Users/runner/Library/Android/sdk
+          mkdir empty_dir
+          rsync -a --delete empty_dir/ /Applications/Xcode_16.1_beta.app/
+          rsync -a --delete empty_dir/ /Applications/Xcode_16_beta_6.app/
+          rsync -a --delete empty_dir/ /Applications/Xcode_15.3.app/
+          rsync -a --delete empty_dir/ /Applications/Xcode_15.2.app/
+          rsync -a --delete empty_dir/ /Applications/Xcode_15.1.app/
+          rsync -a --delete empty_dir/ /Applications/Xcode_15.0.1.app/
+          rsync -a --delete empty_dir/ /Applications/Xcode_14.3.1.app/
+          rsync -a --delete empty_dir/ /Users/runner/Library/Android/sdk/
 
       - name: Install dependencies
         run: python3 -m pip install -r requirements.txt
