CI: Only cancel for pushes

--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -8,7 +8,7 @@ on:
       - main
 
 concurrency:
-  cancel-in-progress: true
+  cancel-in-progress: ${{ github.event_name == 'push' }}
   group: ${{ github.workflow }}
 
 env:
