CI: Run on all branches

--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -4,8 +4,8 @@ on:
   schedule:
   - cron: "0 */3 * * *"
   push:
-    branches:
-      - main
+    branches-ignore:
+      - gh-pages
   workflow_dispatch:
 
 concurrency:
